# SportsOdds

./: .gitignore  CMakeLists.txt  README.md  SportsOdds.cbp  SportsOdds.depend  SportsOdds.layout  howjc19schedule.txt  howjc19schedule2.txt  howjc19teams.txt  nhlschedule.csv  nhlschedule2024.csv  nhlteams.txt  oddsMain.cpp  results.txt  results150000.txt  results600000.txt
Results/: results125000.txt  results300000.txt
include/: Game.h  League.h  SimulationDB.h  SimulationHistory.h  SimulationTester.h  Team.h  TimeFunctions.h
src/: Game.cpp  League.cpp  SimulationDB.cpp  SimulationHistory.cpp  SimulationTester.cpp  Team.cpp  TimeFunctions.cpp
